# RL_demo

./: .gitignore
src/mujoco_rl_demo/: package.xml  setup.cfg  setup.py
src/mujoco_rl_demo/config/: ppo_inverted_pendulum.yaml
src/mujoco_rl_demo/launch/: eval_inverted_pendulum.launch.py  train_inverted_pendulum.launch.py
src/mujoco_rl_demo/mujoco_rl_demo/: eval_node.py  rl_agent.py  train_node.py
