<?xml version="1.0"?>
<package format="3">
  <name>mujoco_rl_demo</name>
  <version>0.0.1</version>
  <description>ROS 2 package for MuJoCo reinforcement learning demo with inverted pendulum.</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>